html-editor: fixed picture overflow

--- a/styles/standard/css/default.css
+++ b/styles/standard/css/default.css
@@ -171,6 +171,7 @@
 		-moz-box-shadow:2px 2px 5px #888;
 		-webkit-box-shadow:2px 2px 5px #888;
 		box-shadow:2px 2px 5px #888;
+                overflow:scroll;
 	}
 	
 	#footer_wrapper {
